Optimizacion + comentarios para el codigo.

--- a/Administracion WinForms/app.config
+++ b/Administracion WinForms/app.config
@@ -2,7 +2,7 @@
 <configuration>
 	<connectionStrings>
 		<add name ="BD"
-			 connectionString="server=localhost;user=root;password=;database=pruebas;"
+			 connectionString="server=localhost;user=root;password=CONTRASEÑA;database=pruebas;"
 			 providerName="MySql.Data.MySqlClient"/>
 	</connectionStrings>
 </configuration>
